Update Swagger annotations
