# tms/api/routes.go
@@ -9,43 +9,10 @@ import (
 func (app *application) routes() *httprouter.Router {
 	router := httprouter.New()
 
-	// swagger:route GET /healthcheck healthcheck healthcheckEndpoint
-	// Health check endpoint.
-	// Checks if the application is running.
-	// responses:
-	//	200: healthCheckResponse
 	router.HandlerFunc(http.MethodGet, "/healthcheck", app.healthcheckHandler)
-
-	// @Title Create a new task
-	// @Description Create task based on the input provided
-	// @Accept  json
-	// @Param   task     body    model.Task     true        "Task body"
-	// @Success 201 {object} model.Task
-	// @Router /tasks [post]
 	router.HandlerFunc(http.MethodPost, "/tasks", app.createTaskHandler2)
-
-	// @Summary Get all tasks
-	// @Description Returns a list of all tasks
-	// @Produce json
-	// @Success 200 {array} model.Task
-	// @Router /tasks [get]
 	router.HandlerFunc(http.MethodGet, "/tasks", app.getAllTasksHandler)
-
-	// @Summary Add a comment to a task
-	// @Description Create comment based on the input provided
-	// @Accept  json
-	// @Produce  json
-	// @Param   comment     body    model.TaskComment     true        "Comment body"
-	// @Success 201 {object} model.TaskComment
-	// @Router /comments [post]
 	router.HandlerFunc(http.MethodPost, "/comments", app.createTaskCommentsHandler)
-
-	// @Summary Get a specific task by ID
-	// @Description Returns a specific task
-	// @Produce json
-	// @Param   id     path    int     true        "Task ID"
-	// @Success 200 {object} model.Task
-	// @Router /tasks/{id} [get]
 	router.Handle(http.MethodGet, "/tasks/:id", httprouter.Handle(app.getTaskHandler))
 
 	// @Summary Update a specific task by ID
